Code cleanup en functionaliteit van alle endpoints voor submissions, tags, feedback en shows geupdate/gefixt